# zeno-client

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  legacy_upload.ipynb  legacy_upload_accents.ipynb  simple_project.ipynb
zeno_client/: __init__.py  client.py  exceptions.py  util.py
